bonus/confs/gitlab-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  namespace: gitlab
  name: gitlab-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  rules:
    - host: gitlab.pissenlit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-webservice-default
                port:
                  number: 8181
    - host: registry.pissenlit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-registry
                port:
                  number: 5000
    - host: minio.pissenlit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-minio-svc
                port:
                  number: 9000
    - host: kas.pissenlit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-kas
                port:
                  number: 8150
